--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
   </header>
 
   <main>
-    <div class="container">
-      <section class="hero">
+    <section class="hero">
+      <div class="container">
         <h2 class="visually-hidden">Оформити замовлення</h2>
         <h1 class="main-header">Ефективні рішення для <br> вашого бізнесу</h1>
         <button type="button" class="main-btn">Замовити послугу</button>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <div class="container">
-      <section class="about">
+    <section class="about">
+      <div class="container">
         <h2 class="visually-hidden">Про роботу</h2>
         <ul class="about-list">
           <li class="about-item list">
@@ -79,11 +79,11 @@
             </p>
           </li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <div class="container">
-      <section class="work">
+    <section class="work">
+      <div class="container">
         <h3 class="visually-hidden">Сфера діяльності</h3>
         <h2 class="work-header">Чим ми займаємося</h2>
         <ul class="work-list">
@@ -97,59 +97,65 @@
             <img src="./images/about_third.jpg" alt="дизайн" width="370" />
           </li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <div class="container">
-      <section class="team">
+    <section class="team">
+      <div class="container">
         <h3 class="visually-hidden">Стаф</h3>
         <h2 class="team-header">Наша команда</h2>
         <ul class="team-list">
           <li class="team-item list">
             <img class="team-img" src="./images/ihor.jpg" alt="Ігор" width="270" />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p class="team-job" lang="en">Product Designer</p>
+            <div class="team-member">
+              <h3 class="team-name">Ігор Дем'яненко</h3>
+              <p class="team-job" lang="en">Product Designer</p>
+            </div>
           </li>
 
           <li class="team-item list">
             <img class="team-img" src="./images/olha.jpg" alt="Ольга" width="270" />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p class="team-job" lang="en">Frontend Developer</p>
+            <div class="team-member">
+              <h3 class="team-name">Ольга Рєпіна</h3>
+              <p class="team-job" lang="en">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-item list">
             <img class="team-img" src="./images/mykola.jpg" alt="Микола" width="270" />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p class="team-job" lang="en">Marketing</p>
+            <div class="team-member">
+              <h3 class="team-name">Микола Тарасов</h3>
+              <p class="team-job" lang="en">Marketing</p>
+            </div>
           </li>
           <li class="team-item list">
             <img class="team-img" src="./images/mykhailo.jpg" alt="Михайло" width="270" />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p class="team-job" lang="en">UI Designer</p>
+            <div class="team-member">
+              <h3 class="team-name">Михайло Єрмаков</h3>
+              <p class="team-job" lang="en">UI Designer</p>
+            </div>
           </li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
   </main>
 
   <footer>
     <div class="container">
-      <section class="footer">
-        <a href="/" lang="en" class="footer-logo"><span class="active-logo">Web</span>Studio</a>
-        <address class="address">
-          <ul class="address-item">
-            <li class="address-map list">
-              <a class="address-map link" href="https://goo.gl/maps/jwkZKJN9jdNiGh6j6" target="_blank"
-                rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-            </li>
-            <li class="address-list list">
-              <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="address-list list">
-              <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </section>
+      <a href="/" lang="en" class="footer-logo"><span class="active-logo">Web</span>Studio</a>
+      <address class="address">
+        <ul>
+          <li class="address-map list">
+            <a class="address-map link" href="https://goo.gl/maps/jwkZKJN9jdNiGh6j6" target="_blank"
+              rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li class="address-list list">
+            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="address-list list">
+            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </div>
   </footer>
 </body>
