--- a/portfolio.html
+++ b/portfolio.html
@@ -48,81 +48,94 @@
           <li class="portfolio-item list"><button type="button" class="portfolio-btn">Додатки</button></li>
           <li class="portfolio-item list"><button type="button" class="portfolio-btn">Дизайн</button></li>
           <li class="portfolio-item list"><button type="button" class="portfolio-btn">Маркетинг</button></li>
-    </div>
+        </ul>
 
-    <div class="container">
-      <section class="project"></section>
-      </ul>
-      <ul class="project-list">
-        <li class="project-item list">
-          <img src="./images/techno-min.jpg" alt="Веб-сайт">
-          <h3 class="project-name">Технокряк</h3>
-          <p class="project-text">Веб-сайт</p>
-        </li>
-        <li class="project-item list">
-          <img src="./images/poster-min.jpg" alt="Постер">
-          <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
-          <p class="project-text">Дизайн</p>
-        </li>
-        <li class="project-item list">
-          <img src="./images/seafood-min.jpg" alt="Дизайн ресторану">
-          <h3 class="project-name">Ресторан Seafood</h3>
-          <p class="project-text">Додаток</p>
-        </li>
-        <li class="project-item list">
-          <img src="./images/prime-min.jpg" alt="Маркетинговий проєкт">
-          <h3 class="project-name">Проєкт Prime</h3>
-          <p class="project-text">Маркетинг</p>
-        </li>
-        <li class="project-item list">
-          <img src="./images/boxes-min.jpg" alt="Додаток">
-          <h3 class="project-name">Проєкт Boxes</h3>
-          <p class="project-text">Додаток</p>
-        </li>
-        <li class="project-item list">
-          <img src="./images/inspiration-min.jpg" alt="Веб-сайт">
-          <h3 class="project-name">Inspiration has no Borders</h3>
-          <p class="project-text">Веб-сайт</p>
-        </li>
-        <li class="project-item list">
-          <img src="./images/limited-min.jpg" alt="Дизайн">
-          <h3 class="project-name">Видання Limited Edition</h3>
-          <p class="project-text">Дизайн</p>
-        </li>
-        <li class="project-item list">
-          <img src="./images/lab-min.jpg" alt="Маркетинговий проєкт">
-          <h3 class="project-name">Проєкт LAB</h3>
-          <p class="project-text">Маркетинг</p>
-        </li>
-        <li class="project-item list">
-          <img src="./images/business-min.jpg" alt="Додаток">
-          <h3 class="project-name">Growing Business</h3>
-          <p class="project-text">Додаток</p>
-        </li>
-      </ul>
+        <ul class="project-list">
+          <li class="project-item list">
+            <img src="./images/techno-min.jpg" alt="Веб-сайт">
+            <div class="project">
+              <h3 class="project-name">Технокряк</h3>
+              <p class="project-text">Веб-сайт</p>
+            </div>
+          </li>
+          <li class="project-item list">
+            <img src="./images/poster-min.jpg" alt="Постер">
+            <div class="project">
+              <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+              <p class="project-text">Дизайн</p>
+            </div>
+          </li>
+          <li class="project-item list">
+            <img src="./images/seafood-min.jpg" alt="Дизайн ресторану">
+            <div class="project">
+              <h3 class="project-name">Ресторан Seafood</h3>
+              <p class="project-text">Додаток</p>
+            </div>
+          </li>
+          <li class="project-item list">
+            <img src="./images/prime-min.jpg" alt="Маркетинговий проєкт">
+            <div class="project">
+              <h3 class="project-name">Проєкт Prime</h3>
+              <p class="project-text">Маркетинг</p>
+            </div>
+          </li>
+          <li class="project-item list">
+            <img src="./images/boxes-min.jpg" alt="Додаток">
+            <div class="project">
+              <h3 class="project-name">Проєкт Boxes</h3>
+              <p class="project-text">Додаток</p>
+            </div>
+          </li>
+          <li class="project-item list">
+            <img src="./images/inspiration-min.jpg" alt="Веб-сайт">
+            <div class="project">
+              <h3 class="project-name">Inspiration has no Borders</h3>
+              <p class="project-text">Веб-сайт</p>
+            </div>
+          </li>
+          <li class="project-item list">
+            <img src="./images/limited-min.jpg" alt="Дизайн">
+            <div class="project">
+              <h3 class="project-name">Видання Limited Edition</h3>
+              <p class="project-text">Дизайн</p>
+            </div>
+          </li>
+          <li class="project-item list">
+            <img src="./images/lab-min.jpg" alt="Маркетинговий проєкт">
+            <div class="project">
+              <h3 class="project-name">Проєкт LAB</h3>
+              <p class="project-text">Маркетинг</p>
+            </div>
+          </li>
+          <li class="project-item list">
+            <img src="./images/business-min.jpg" alt="Додаток">
+            <div class="project">
+              <h3 class="project-name">Growing Business</h3>
+              <p class="project-text">Додаток</p>
+            </div>
+          </li>
+        </ul>
     </div>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <section class="footer">
-        <a href="/" lang="en" class="footer-logo"><span class="active-logo">Web</span>Studio</a>
-        <address class="address">
-          <ul class="address-item">
-            <li class="address-map list">
-              <a class="address-map link" href="https://goo.gl/maps/jwkZKJN9jdNiGh6j6" target="_blank"
-                rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-            </li>
-            <li class="address-list list">
-              <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="address-list list">
-              <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </section>
+      <a href="/" lang="en" class="footer-logo"><span class="active-logo">Web</span>Studio</a>
+      <address class="address">
+        <ul>
+          <li class="address-map list">
+            <a class="address-map link" href="https://goo.gl/maps/jwkZKJN9jdNiGh6j6" target="_blank"
+              rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li class="address-list list">
+            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="address-list list">
+            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </div>
   </footer>
 </body>
